# test_conflicts

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl
danborys/: Makefile  a_maze_ing.py  basic_algorithm.py  config.txt  config_parser.py  grid.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazeview-1.0.0-py3-none-any.whl  output_writer.py  pyproject.toml
danborys/srcs/maze_generator/: README.md  __init__.py  a_maze_ing.py  abc_algorithm.py  basic_algorithm.py  config.txt  grid.py  maze_generator.py  output_writer.py  perfect_algorithm.py  solver.py
danborys/srcs/maze_visualizer/: MazeParams.py  MazeVisualize.py  __init__.py  maze_params.py  maze_visualizer.py
danborys/sudas/: generic_test.py  pyproject.toml
images/: alphabets.xpm
srcs/maze_generator/: config_parser.py  output_writer.py
srcs/maze_visualizer/: pyproject.toml
srcs/maze_visualizer/mlx_tools/: base_mlx.py  image_operations.py  letter_to_img_map.py  mlx_errors.py
sudas/: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  main.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazeview-1.0.0-py3-none-any.whl  output_writer.py  pyproject.toml
sudas/mlx_CLXV/: Makefile
sudas/mlx_CLXV/python/src/mlx/: mlx.py
sudas/srcs/danborys/: abc_algorithm.py  maze_generator.py  perfect_algorithm.py
sudas/srcs/maze_generator/: __init__.py  a_maze_ing.py  abc_algorithm.py  basic_algorithm.py  config.txt  config_parser.py  grid.py  main.py  maze_generator.py  perfect_algorithm.py  pyproject.toml  solver.py
sudas/srcs/maze_visualizer/: MazeParams.py  MazeVisualize.py  README.md  __init__.py  maze_params.py  maze_visualizer.py
sudas/srcs/maze_visualizer/mlx_tools/: shape_maker.py
sudas/srcs/mlx_tools/: BaseMLX.py  ImageOperations.py  LetterToImageMapper.py  ShapeMaker.py
(+10 files in other folders)
