[project]
name = "a-maze-ing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mazegen",
    "mazeview",
    "mlx",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
mazegen = { path = "mazegen-1.0.0-py3-none-any.whl" }
mazeview = { path = "mazeview-1.0.0-py3-none-any.whl" }
mlx = { path = "mlx-2.2-py3-none-any.whl" }
