[project]
name = "mazeview"
version = "1.0.0"
description = "Basic maze visualizer using MLX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}  # Add your license
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
artifacts = [
    "mlx_tools/*.xpm",
]

[tool.hatch.build.targets.wheel.sources]
# This tells hatch: "Take everything in the current dir and call it 'mazeview' in the wheel"
"." = "mazeview"